# probe

./: .env.example  .gitignore  README.md  build-project.sh  docker-compose.yml  setup-real-data.sh
backend/: .dockerignore  .env.example  Dockerfile  RAILWAY_DEPLOYMENT.md  docker-entrypoint.sh  package-lock.json  package.json  railway.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.module.ts  main.ts
backend/src/database/: prisma.service.ts
cli/: README.md  package-lock.json  package.json
cli/src/: index.ts
cli/src/commands/: alerts.ts  analytics.ts  auth.ts  deploy.ts  programs.ts  transactions.ts
cli/src/utils/: config.ts
contracts/: README.md
contracts/probe-instrumentation/: Anchor.toml  Cargo.toml
contracts/probe-instrumentation/programs/probe-instrumentation/: Cargo.toml
contracts/probe-instrumentation/src/: lib.rs
docs/: 00-PROJECT-OVERVIEW.md  01-ARCHITECTURE.md  02-BACKEND-NESTJS.md  03-FRONTEND-NEXTJS.md  04-SMART-CONTRACTS.md  05-DATABASE-SCHEMA.md  06-API-DOCUMENTATION.md  07-DEPLOYMENT.md  08-SDK-DOCUMENTATION.md  09-DEVELOPMENT-GUIDE.md  10-CLI-DOCUMENTATION.md
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json
frontend/public/: llms.txt
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: use-alerts.ts  use-analytics.ts  use-auth.ts  use-programs.ts  use-transactions.ts
frontend/src/lib/: utils.ts
frontend/src/store/: auth.store.ts
monitoring/: prometheus.yml
sdk/typescript/: README.md  package-lock.json  package.json  test-sdk.js
(+97 files in other folders)
