[package]
name = "probe-instrumentation"
version = "0.1.0"
description = "Probe instrumentation library for Solana programs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "probe_instrumentation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
borsh = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"

[profile.release]
overflow-checks = true
